05.12.2010
        - Completed porting of dlist module (the drum list). Test OK. (Tim)
04.12.2010
        - Fix: Escape button does not exit track renaming editor. (Orcan)
        - Fix: Midi ports config table items are editable when they are not supposed to. (Orcan)
        - Ported scldiv. Things seem to work as before. Maybe needs more testing. (Orcan)
        - Removed fontsel, and synthwizardbase from the project. (Orcan)
        - Feature: In waveedit, the mousewheel controls the vertical slider. (Orcan)
        - Completed porting shortcutcapturedialog, filedialog. Added paste clone, 2track, clone2track, 
           insert empty, insert, to configurable shortcuts. Changed all arr/pianoroll/drumedit hard-wired 
           keys to refer to shortcut table. (TODO: Other windows?) (Tim)
        - Correction: Convert all state() to QInputEvent::modifiers() and stateAfter() to modifiers()
           (I forced a downcast to QInputEvent if required). Is correct? QT Help says:
           QInputEvent::modifiers() "Returns the keyb. mod. flags that existed imm. before the event occurred."
           QKeyEvent::modifiers()   "Returns the keyb. mod. flags that existed imm. after the event occurred."           
03.12.2010
        - Ported all copy/paste/drag/drop coding. Including pianoroll, drumedit, pcanvas, prcanvas, dcanvas, 
           and effect rack. Test OK cut, copy, paste, also drag n drop various files to arranger and rack. (Tim)
        - Fixed arranger menu cut/copy enabling. Was never right before. Test OK cut and copy. (Tim)
        - Completed port of MidiInstrument. Fixed its populatePatchPopup(), which fixes midi trackinfo 
           instrument selection not updating h-bank, l-bank, and prog spinboxes. (Tim)
        - Some cleanups: Remove the old Header class. Rename HeaderNew to Header. (Orcan)
        - Ported: osc, wave, dcanvas. (Orcan)
02.12.2010
        - Ported alayout, tlist, arranger (Orcan)