@@ -1,5 +1,8 @@
 05.12.2010
         - Completed porting of dlist module (the drum list). Test OK. (Tim)
+        - Ported sigedit and posedit. Used SpinBox in place of Q3SpinWidget. TODO: Needs some work on
+          locating the arrows of the SpinBox accurately. Maybe we need to implement another SpinBox
+          from scratch? (Orcan)
 04.12.2010
         - Fix: Escape button does not exit track renaming editor. (Orcan)
         - Fix: Midi ports config table items are editable when they are not supposed to. (Orcan)
